<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Year">Y</string>
    <string name="Courier_information">查询快递信息</string>
    <string name="InputPassword">请输入密码</string>
    <string name="InputPhoneNumber">请输手机号码</string>
    <string name="InputPhoneNumber2">请输入正确手机号码</string>
    <string name="InputVerification">请输入验证码</string>
    <string name="Looking_for_MC">找司仪</string>
    <string name="Looking_for_car">找婚车</string>
    <string name="Looking_for_wedding">找婚庆</string>
    <string name="NetworkingError">要想看最新数据，请先联网。</string>
    <string name="QQ_space">QQ空间</string>
    <string name="ReInputPassword">请再次输入密码</string>
    <string name="STO">申通快递</string>
    <string name="Sina_weibo">新浪微博</string>
    <string name="Tencent_weibo">腾讯微博</string>
    <string name="Use_the_existing_accounts_for_comment">使用已有账号发表评论</string>
    <string name="VerificationCodeNull">请输入验证码</string>
    <string name="WeChat">微信好友</string>
    <string name="YUAN">元</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_company">关于结婚小秘书</string>
    <string name="aboutus">关于我们</string>
    <string name="absent">缺席</string>
    <string name="account">输入账户</string>
    <string name="action_select">Pick</string>
    <string name="action_settings">Settings</string>
    <string name="activity_myphone">我的相册</string>
    <string name="activity_play">放映</string>
    <string name="activity_share">分享</string>
    <string name="activity_success">活动参与成功</string>
    <string name="additional_submit">追加评价</string>
    <string name="alisdk_message_10008_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10008_message">生成订单地址出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10008_name">GET_ORDER_URL_EXCEPTION</string>
    <string name="alisdk_message_10008_type">E</string>
    <string name="alisdk_message_10009_action">请稍后重试当前操作，若仍然出错，请反馈至论坛，技术支持或 Android SDK 开发咨询群</string>
    <string name="alisdk_message_10009_message">查询订单出错, 错误信息为 {0}</string>
    <string name="alisdk_message_10009_name">QUERY_ORDER_RESULT_EXCEPTION</string>
    <string name="alisdk_message_10009_type">E</string>
    <string name="alisdk_message_14_message">调用外部API传入参数为null，请加入参数再试</string>
    <string name="alisdk_message_17_action" />
    <string name="alisdk_message_17_message">不能获取类名为 {0}，过滤条件为 {1} 的服务</string>
    <string name="alisdk_message_17_name">SERVICE_NOT_AVAILABLE_ERROR</string>
    <string name="alisdk_message_17_type">E</string>
    <string name="alisdk_message_801_action">请调整参数后重试当前操作</string>
    <string name="alisdk_message_801_message">商品数量必须为整数并大于 0</string>
    <string name="alisdk_message_801_name">QUANTITY_FORMAT_ERROR</string>
    <string name="alisdk_message_801_type">E</string>
    <string name="alisdk_message_802_action">请修改传入的淘客 pid，如不确认，请联系淘客相关人员</string>
    <string name="alisdk_message_802_message">当前传入的淘客 pid {0} 非法，正确格式应以 mm_ 为前缀</string>
    <string name="alisdk_message_802_name">INVALID_TAOKE_PID_ERROR</string>
    <string name="alisdk_message_802_type">E</string>
    <string name="alisdk_message_803_action">请在初始化之前调用 TradeConfigs.defaultTaokePid=mm_**** 设置默认的淘客 pid 值, 此值会在相关方法调用时未指定 pid 时使用</string>
    <string name="alisdk_message_803_message">未设置默认的淘客 pid</string>
    <string name="alisdk_message_803_name">INVALID_DEFAULT_TAOKE_PID</string>
    <string name="alisdk_message_803_type">W</string>
    <string name="alisdk_message_804_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_804_message">使用支付宝支付失败，支付宝错误码为 8000, 含义为正在处理中</string>
    <string name="alisdk_message_804_name">PAY_IN_PROGRESS</string>
    <string name="alisdk_message_804_type">E</string>
    <string name="alisdk_message_805_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_805_message">使用支付宝支付失败，支付宝错误码为 4000, 含义为订单支付失败</string>
    <string name="alisdk_message_805_name">PAY_ORDER_FAILED</string>
    <string name="alisdk_message_805_type">E</string>
    <string name="alisdk_message_806_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_806_message">使用支付宝支付失败，支付宝错误码为 6001, 含义为用户中途取消</string>
    <string name="alisdk_message_806_name">PAY_USER_CANCEL</string>
    <string name="alisdk_message_806_type">E</string>
    <string name="alisdk_message_807_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_807_message">使用支付宝支付失败，支付宝错误码为 6002, 含义为网络连接出错</string>
    <string name="alisdk_message_807_name">PAY_NETWORK_FAILED</string>
    <string name="alisdk_message_807_type">E</string>
    <string name="alisdk_message_808_action">请准备订单号和支付宝错误码至旺旺支付宝移动支持群(旺旺号:移动收单daily)咨询</string>
    <string name="alisdk_message_808_message">使用支付宝支付失败，支付宝错误码为 {0}</string>
    <string name="alisdk_message_808_name">PAY_COMMON_ERROR</string>
    <string name="alisdk_message_808_type">E</string>
    <string name="alisdk_message_809_message">使用Apliay SDK调用方法失败，请下载最新的ApliaySDK lib包或者使用H5方式付款</string>
    <string name="aliusersdk_network_error">亲，您的手机网络不太顺畅喔~</string>
    <string name="aliusersdk_session_error">亲，你的操作已超时，请重试</string>
    <string name="amounts">礼金登记簿</string>
    <string name="anonymous_comments">匿名评论</string>
    <string name="app_config_path_cache_images">/MarrySecretary/images/</string>
    <string name="app_config_path_cache_music">/MarrySecretary/music/</string>
    <string name="app_name">结婚小秘书</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appointmentRemind">温馨提示</string>
    <string name="appointment_time">预约时间：</string>
    <string name="arranged">已安排</string>
    <string name="arrangementSeat">排座位</string>
    <string name="arrivetime">到店时间:</string>
    <string name="auth_sdk_message_10003_action" />
    <string name="auth_sdk_message_10003_message">用户取消登录或登录失败</string>
    <string name="auth_sdk_message_10003_name">USER_CANCEL</string>
    <string name="auth_sdk_message_10003_type">I</string>
    <string name="auth_sdk_message_10004_action" />
    <string name="auth_sdk_message_10004_message">用户取消登录</string>
    <string name="auth_sdk_message_10004_name">TAOBAO_CANCEL</string>
    <string name="auth_sdk_message_10004_type">I</string>
    <string name="auth_sdk_message_10005_action" />
    <string name="auth_sdk_message_10005_message">唤起手淘登录失败</string>
    <string name="auth_sdk_message_10005_name">TAOBAO_ERROR</string>
    <string name="auth_sdk_message_10005_type">I</string>
    <string name="auth_sdk_message_10010_action" />
    <string name="auth_sdk_message_10010_message">系统异常</string>
    <string name="auth_sdk_message_10010_name">SYSTEM_ERROR</string>
    <string name="auth_sdk_message_10010_type">I</string>
    <string name="auth_sdk_message_10015_action" />
    <string name="auth_sdk_message_10015_message">退出登录</string>
    <string name="auth_sdk_message_10015_name">USER_LOGOUT</string>
    <string name="auth_sdk_message_10015_type">I</string>
    <string name="auth_sdk_message_10101_action" />
    <string name="auth_sdk_message_10101_message">H5登录失败</string>
    <string name="auth_sdk_message_10101_name">H5_ERROR</string>
    <string name="auth_sdk_message_10101_type">I</string>
    <string name="auth_sdk_message_15_action">请使用默认的 androiddebugkey 对当前开发应用签名或在应用初始化之前调用 MemberSDK.turnOnDebug(), 运行程序查看 logcat 输出以获取更多错误细节，并采取对应操作</string>
    <string name="auth_sdk_message_15_message">接口异常，错误消息为： {0}, 请使用 LogCat 查看更多细节</string>
    <string name="auth_sdk_message_15_name">SERVER_REQUEST_ERROR</string>
    <string name="auth_sdk_message_15_type">I</string>
    <string name="backgroundmusic">背景音乐</string>
    <string name="beijing">北京</string>
    <string name="bgmusic">背景音乐</string>
    <string name="bluetooth">蓝牙</string>
    <string name="booksuccessdate">预约时间：</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bride">新娘:</string>
    <string name="btn_houtai">后台更新</string>
    <string name="cancel">取消</string>
    <string name="cases">案例</string>
    <string name="cdk">兑换码</string>
    <string name="cleanCache">清除缓存</string>
    <string name="clickUpdate">点击修改</string>
    <string name="crop__done">确定</string>
    <string name="delete_cancel">取消</string>
    <string name="dialog_exit_login">退出登录</string>
    <string name="error_correction">我要纠错</string>
    <string name="five">五</string>
    <string name="four">四</string>
    <string name="locationing">定位中</string>
    <string name="married_process">结婚登记流程？</string>
    <string name="marry_details_inputtask">请输入任务名称</string>
    <string name="marry_details_name">任务名称:</string>
    <string name="marry_details_task">婚礼任务</string>
    <string name="marry_details_task_context">备注:</string>
    <string name="marry_details_task_judge">任务是否完成:</string>
    <string name="marry_details_time">任务时间:</string>
    <string name="marry_details_times">点击选择时间</string>
    <string name="marry_details_type">任务类别:</string>
    <string name="marry_details_types">点击选择类别</string>
    <string name="one">一</string>
    <string name="registration">婚姻登记处</string>
    <string name="registration_tips">登记小贴士</string>
    <string name="service_toast">服务提醒</string>
    <string name="seven">日</string>
    <string name="six">六</string>
    <string name="task_memory">请添加备注</string>
    <string name="three">三</string>
    <string name="two">二</string>
    <string name="update_password">修改密码</string>
    <string name="yuyueshijian">预约时间</string>
</resources>