<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zxin.zxinlib.view.CommonCrosswiseBar
        android:id="@+id/ccb_marray_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/main_title_background"
        app:isTopBar="true"
        app:left_button_image="@drawable/icon_back"
        app:left_button_size="20px"
        app:show_left_button="true"
        app:title_text="设置"
        app:title_textColor="@color/color_ffffff"
        app:title_textSize="@dimen/size_18px" />

    <com.zxin.zxinlib.view.CommonCrosswiseBar
        android:id="@+id/ll_updatepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/color_ffffff"
        app:left_button_text="@string/update_password"
        app:left_button_textColor="@color/color_333333"
        app:left_button_textSize="@dimen/size_15px"
        app:right_button_textColor="@color/color_666666"
        app:right_button_textSize="13px"
        app:right_button_text="@string/clickUpdate"
        app:show_right_button="true" />

    <com.zxin.zxinlib.view.CommonCrosswiseBar
        android:id="@+id/ll_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/color_ffffff"
        app:left_button_text="@string/cleanCache"
        app:left_button_textColor="@color/color_333333"
        app:left_button_textSize="@dimen/size_15px"
        app:right_button_textColor="@color/color_666666"
        app:right_button_textSize="13px"
        app:right_button_text="0 M"
        app:show_right_button="true" />

    <TextView
        android:id="@+id/tv_unloging"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim20"
        android:background="@color/color_ffffff"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/dialog_exit_login"
        android:textColor="@color/colorPrimary" />
</LinearLayout>