<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.zxin.zxinlib.view.CommonCrosswiseBar
        android:id="@+id/ccb_marray_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/main_title_background"
        app:isTopBar="true"
        app:left_button_image="@drawable/icon_back"
        app:left_button_size="20px"
        app:show_left_button="true"
        app:title_text="@string/marry_details_task"
        app:title_textColor="@color/color_ffffff"
        app:title_textSize="@dimen/size_18px" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_task_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/marry_details_name"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/size_13sp" />

                <EditText
                    android:id="@+id/et_task_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="true"
                    android:gravity="center|right"
                    android:hint="@string/marry_details_inputtask"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/color_666666"
                    android:textColorHint="@color/color_999999"
                    android:textSize="@dimen/size_13sp" />
            </LinearLayout>
            <View style="@style/line_style" />

            <LinearLayout
                android:id="@+id/btn_task_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/marry_details_time"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/size_13sp" />

                <TextView
                    android:id="@+id/task_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:hint="@string/marry_details_times"
                    android:padding="10dp"
                    android:textColor="@color/color_666666"
                    android:textColorHint="@color/color_999999"
                    android:textSize="@dimen/size_13sp" />
            </LinearLayout>
            <View style="@style/line_style" />

            <LinearLayout
                android:id="@+id/btn_task_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/marry_details_type"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/size_13sp" />

                <TextView
                    android:id="@+id/task_types"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|right"
                    android:hint="@string/marry_details_types"
                    android:padding="10dp"
                    android:textColor="@color/color_666666"
                    android:textColorHint="@color/color_999999"
                    android:textSize="@dimen/size_13sp" />
            </LinearLayout>

            <View style="@style/line_style" />

            <RelativeLayout
                android:id="@+id/ll_task_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/marry_details_task_judge"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/size_13sp" />

                <com.zxin.zxinlib.view.switchbutton.SwitchButton
                    android:id="@+id/switch_compat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:focusable="false"
                    app:kswThumbColor="@color/color_ffffff"
                    app:kswTintColor="@color/order_radio_bg"
                    />
            </RelativeLayout>

            <View style="@style/line_style" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marry_details_task_context"
                    android:textColor="@color/color_666666"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/task_contexts"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/textview_border"
                    android:minLines="5"
                    android:gravity="left"
                    android:hint="@string/task_memory"
                    android:maxLength="30"
                    android:padding="5dp"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_999999"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_ok"
            android:orientation="vertical"
            android:text="完成"
            android:layout_marginRight="5dp"
            android:textColor="@color/color_ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_ok"
            android:orientation="vertical"
            android:text="删除"
            android:layout_marginLeft="5dp"
            android:textColor="@color/color_ffffff"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>